customize layout of header and hero
edited styling for header/hero layout on style.css

--- a/index.html
+++ b/index.html
@@ -4,22 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kerat6 Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="header">
-        Header Logo <ul class="headlink">
+        <ul>
+            <li class="logo">Header Logo</li>
             <li><a href="#">header link one</a></li>
             <li><a href="#">header link two</a></li>
             <li><a href="#">header link three</a></li>
         </ul>
-        <div>
-            This website is awesome <div class="button"> Sign up</div>
+        <div class="hero">
+            <div>
+                <h1>This website is awesome</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi ex
+                    asperiores enim ratione minima nostrum quaerat architecto aliquam ad obcaecati maiores nesciunt
+                    repellat praesentium ipsam dicta modi placeat, quo error.</p>
+                <div class="button"> Sign up</div>
+            </div>
+            <img class="hero-pic" src="./images/bee.jpg" alt="Bee on flower" />
         </div>
-        <img class="bees" src="./images/bee.jpg" alt="Bee on flower" height="300" width="600" />
     </div>
-
 
 
     <div class="mid">
