style mid and quote section of landing page
positioned the content and added stylings to text.

--- a/index.html
+++ b/index.html
@@ -30,45 +30,51 @@
 
 
     <div class="mid">
-        Some random information.
-        <div class="info">
-            <img src="./images/hive.jpg" alt="comb with bees" height="200" width="200">
-            <div class="text">This is a
-                honeycomb with bees on it!
+        <div class="info-header">Some random information.</div>
+        <div class="card">
+            <div class="info">
+                <img src="./images/hive.jpg" alt="comb with bees" height="200" width="200">
+                <div class="text">This is a
+                    honeycomb with bees on it!
+                </div>
             </div>
             <div class="info">
                 <img src="./images/hive.jpg" alt="comb with bees" height="200" width="200">
                 <div class="text">This is a
                     honeycomb with bees on it!
                 </div>
-                <div class="info">
-                    <img src="./images/keepers.jpg" alt="comb with bees" height="200" width="200">
-                    <div class="text">These are some beekeepers!
-                    </div>
-                    <div class="info">
-                        <img src="./images/keepers.jpg" alt="comb with bees" height="200" width="200">
-                        <div class="text">These are some beekeepers!
-                        </div>
+            </div>
+            <div class="info">
+                <img src="./images/keepers.jpg" alt="comb with bees" height="200" width="200">
+                <div class="text">These are some beekeepers!
+                </div>
+            </div>
 
-                    </div>
+            <div class="info">
+                <img src="./images/keepers.jpg" alt="comb with bees" height="200" width="200">
+                <div class="text">These are some beekeepers!
                 </div>
+            </div>
+        </div>
+    </div>
+    </div>
 
-                <div class="bot">
-                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, harum ipsam
-                        tempora laudantium
-                        iste tempore perferendis. Dolorum, repudiandae laudantium ipsa magni sequi animi doloremque sed
-                        dolores et, excepturi omnis harum.</p>
-                    <p>-Kerat6</p>
-                </div>
-
-                <div class="sup">
-                    <div>Call to action! It's time!</div>
-                    <div>Sign up for our product by clicking that button right over there!</div>
-                    <div class="button">Sign up</div>
-                </div>
-                <div class="footer">
-                    Copyright &copy; Kerat6 2024
-                </div>
+    <div class="bot">
+        <div class="quote"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, harum ipsam
+            tempora laudantium
+            iste tempore perferendis. Dolorum, repudiandae laudantium ipsa magni sequi animi doloremque sed
+            dolores.
+            <div class="quote-author">-Kerat6</div>
+        </div>
+    </div>
+    <div class="sup">
+        <div>Call to action! It's time!</div>
+        <div>Sign up for our product by clicking that button right over there!</div>
+        <div class="button">Sign up</div>
+    </div>
+    <div class="footer">
+        Copyright &copy; Kerat6 2024
+    </div>
 </body>
 
 </html>
