finish landing page
call to action and footer added and flex items positioned accordingly.

--- a/index.html
+++ b/index.html
@@ -67,10 +67,14 @@
             <div class="quote-author">-Kerat6</div>
         </div>
     </div>
-    <div class="sup">
-        <div>Call to action! It's time!</div>
-        <div>Sign up for our product by clicking that button right over there!</div>
-        <div class="button">Sign up</div>
+    <div class="call">
+        <div class="sup">
+            <div class="suphead">Call to action! It's time!</div>
+            <div>Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <div class="call-button">
+            <div class="sign-up">Sign up</div>
+        </div>
     </div>
     <div class="footer">
         Copyright &copy; Kerat6 2024
